removed border for parent-container and added dashboard image

--- a/assets/style.css
+++ b/assets/style.css
@@ -8,8 +8,8 @@ table{
 	border-spacing:5px;
 }
 .parent-container{
-	border-style: solid;
-	border-color: black;
+	/* border-style: solid; */
+	/* border-color: black; */
 	padding:20px;	
 }
 .container{
